--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "marked": "^0.6.0",
     "react": "^v16.8.0-alpha.0",
     "react-dom": "^v16.8.0-alpha.0",
     "react-scripts": "2.1.3",
